# litentry-parachain

./: Cargo.toml
.github/workflows/: ci.yml  release-ts-api-package.yml
bitacross-worker/enclave-runtime/: Cargo.toml
bitacross-worker/enclave-runtime/src/initialization/: mod.rs
bitacross-worker/enclave-runtime/src/rpc/: worker_api_direct.rs
bitacross-worker/enclave-runtime/src/test/: direct_rpc_tests.rs
bitacross-worker/scripts/litentry/release/: deploy.sh
primitives/core/src/: identity.rs  web3_token.rs
runtime/rococo/src/: lib.rs
scripts/: fork-parachain-and-launch.sh
tee-worker/app-libs/stf/src/: trusted_call_result.rs
tee-worker/cli/: lit_ts_test.sh
tee-worker/client-api/parachain-api/: package.json  tsconfig.json
tee-worker/client-api/sidechain-api/: package.json  tsconfig.json
tee-worker/enclave-runtime/: Enclave.edl
tee-worker/enclave-runtime/src/: attestation.rs  lib.rs
tee-worker/litentry/core/assertion-build/src/dynamic_wasm/assertion_plugins/a20_plugin/: Cargo.toml
tee-worker/litentry/core/assertion-build/src/dynamic_wasm/assertion_plugins/a20_plugin/src/: lib.rs
tee-worker/service/src/: main_impl.rs
tee-worker/ts-tests/: pnpm-lock.yaml  pnpm-workspace.yaml
tee-worker/ts-tests/integration-tests/: di_evm_identity.test.ts  di_substrate_identity.test.ts  di_vc.test.ts  dr_vc.test.ts  ii_batch.test.ts  ii_identity.test.ts  package.json
tee-worker/ts-tests/tee-contracts/: .gitignore  hardhat.config.ts  package.json
ts-tests/tests/: precompile-contract.test.ts
worker-pallets/parentchain/: Cargo.toml
(+67 files in other folders)
