[workspace]

[package]
name = "a20-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "1.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

[dev-dependencies]
extism = "1.2.0"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }

[lib]
crate_type = ["cdylib"]
